more sumoylation intro details and references

--- a/introduction.tex
+++ b/introduction.tex
@@ -8,6 +8,7 @@
 Given the constantly improving cost and speed of genome sequencing, it is reasonable to expect that within the coming decades personal genomes will be known for a substantial part of the global populace. Unfortunately, our limited ability to interpret the variation within stands in stark contrast with this development. Even when only considering mutations in coding regions of the genome, the effects of most missense variants are not known. While a number of computational approaches exist to make predictions as to the effects of coding variants, they are currently not reliable enough for clinical use. By comparison, Laboratory assays produce more trustworthy results, but until recently did not scale to the space of all possible mutations. The development of Deep Mutational Scanning~\cite{fowler_high-resolution_2010} has now made this endeavour possible. In the following sections, each of these issues will be discussed in more detail.
 
 \section{The Genotype-Phenotype Problem}
+\label{introGenoPheno}
 
 Linking genotype to phenotype is a very difficult problem. The part of the human genome we understand best are protein-coding genes, yet they only constitute a small fraction the whole. Impacts of mutations in other functional elements such as introns, untranslated regions of genes, or regulatory sequences, are more difficult to assay, not to mention the vast stretches of intragenic space. While one might expect the latter to not bear functional significance a priori, the fact that a large number of loci identified as correlated with diseases in genome-wide association studies (GWAS) are found within these regions~\cite{edwards_beyond_2013} hints at more functions hidden within. % Edwards2013: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3824120/
 But even for protein-coding sequences the problem is far from simple. Alleles with simple Mendelian behaviour are the exception rather than the rule~\todo{REF}. Most phenotypes are complex, i.e. emerge through the interplay of many different genetic or environmental factors. Conversely, many genes are also pleiotropic, i.e. they are involved more than one mechanism. As a result of this complexity, a mutation found in one person may not have the same effect as in another---a phenomenon called incomplete penetrance. Similarly, two different mutations within the same coding sequence need not have the same effect either. Depending on how the translated protein is affected (catastrophic folding failure, alteration of a molecular interaction interface or active site, or a subtle change on an unused surface) the effects may differ in severity or in rare cases even in the emergence of new behaviours.
@@ -132,18 +133,20 @@ An alternative approach to covering longer stretches of DNA is to subdivide them
 \section{Background: The Sumoylation Pathway}
 \label{intro:sumoylation}
 
-In the following chapters, we will evaluate the performance of Deep Mutational Scanning with respect to its ability to detect effects not only on overall function but individual subfunction. Beyond the amenability of the proteins to the employed assays, an ideal testing ground would be comprised of a biological system that is both mechanistically complex and has been well studied previously in terms of structure and mechanism. The Sumoylation life cycle does not only fulfill these criteria, but is also of great biological importance. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behavior, especially in terms of localization and physical interactions~\todo{REF}. Sumoylation plays an important role in a large number of cellular processes. It is therefore not surprising that the core members of the pathway are essential genes~\todo{REF}.
+In the following chapters, we will evaluate the performance of Deep Mutational Scanning with respect to its ability to detect the effects of different variants on overall function. However, as mentioned in section\ref{introGenoPheno}, many genes perform multiple functions and sub-functions and the proteins they encode engage in multiple interactions with other molecules. Thus, beyond the amenability of the proteins to the employed assays, an ideal testing ground would be comprised of a biological system that is both mechanistically complex and has been well studied previously in terms of structure and mechanism. This would allow for an examination of the assay's capabilities of detecting if and how a variant that damages an individual sub-function is reflected in its overall functional impact. 
+
+The Sumoylation life cycle does not only fulfill these criteria, but is also of great biological importance. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behavior, especially in terms of localization and physical interactions~\cite{geiss-friedlander_concepts_2007}. Sumoylation plays an important role in a large number of cellular processes~\cite{geiss-friedlander_concepts_2007}. It is therefore not surprising that the core members of the pathway are essential genes~\cite{nacerddine_sumo_2005}.
 
 \begin{figure}
 	\centering
 	\includegraphics[width=\textwidth]{img/sumoylation_steps.pdf}
-	\caption{Steps in the sumoylation cascade. SENP protease matures a SUMO precursor by cleaving off its four C-terminal residues. In the activation step, the E1 complex forms a thioester bond  between SUMO and one of its cysteine residues under ATP consumption. It then transestereficates SUMO to the E2. The E2 recognizes potential targets via their $\Psi$KXE motif. With the help of an E3, SUMO is then ligated to the central lysine within that motif. SENP proteases can reverse the process by hydrolysing this new peptide bond. Images were generated usingn data from the following PDB structures: \texttt{2G4D}~\cite{xu_crystal_2006}, \texttt{3KYC}~\cite{olsen_active_2010}, \texttt{4W5V}~\cite{reiter_characterization_2016}, \texttt{3UIP}~\cite{gareau_determinants_2012}}
+	\caption{Steps in the sumoylation cascade. SENP protease matures a SUMO precursor by cleaving off its four C-terminal residues. In the activation step, the E1 complex forms a thioester bond  between SUMO and one of its cysteine residues under ATP consumption. It then transestereficates SUMO to the E2. The E2 recognizes potential targets via their $\Psi$KXE motif. With the help of an E3, SUMO is then ligated to the central lysine within that motif. SENP proteases can reverse the process by hydrolysing this new peptide bond. Images were generated using data from the following PDB structures: \texttt{2G4D}~\cite{xu_crystal_2006}, \texttt{3KYC}~\cite{olsen_active_2010}, \texttt{4W5V}~\cite{reiter_characterization_2016}, \texttt{3UIP}~\cite{gareau_determinants_2012}}
 	\label{fig:sumoylation_steps}
 \end{figure}
 
-Despite employing a distinct set of proteins compared to the ubiquitination machinery, the sumoylation pathway bears many close similarities. Analogously to ubiquitin, an enzymatic cascade of proteases, E1, E2 and E3s guide SUMO through its maturation, activation, conjugation and ligation phase~\todo{REF} (Figure \ref{fig:sumoylation_steps}). After expression, SUMO is matured through cleavage of four amino acids from its C-terminus, exposing a diglycine motif. In humans, this process is performed by two proteases, SENP1 and SENP2. Next, an E1 activation complex (UBA2-SAE1) forms a thioester bond between the SUMO C-terminal diglycine and a cysteine residue within the E1 protein under the consumption of ATP. An E2 conjugase (UBE2I) binds to the complex, so that the activated SUMO can be transfered to one of its own cysteine residues via transesterification. 
+Despite employing a distinct set of proteins compared to the ubiquitination machinery, the sumoylation pathway bears many close mechanistic similarities. Analogously to ubiquitin, a cascade of enzymes, E1, E2 and E3s guide SUMO through its maturation, activation, conjugation and ligation phase~\cite{geiss-friedlander_concepts_2007} (Figure \ref{fig:sumoylation_steps}). After expression, SUMO is matured through cleavage of four amino acids from its C-terminus, exposing a diglycine motif. In humans, this process is performed by two peptidases, SENP1 and SENP2 (short for sentrin-specific peptidase, where sentrin is an alternative name for SUMO). Next, an E1 activation complex (UBA2-SAE1) forms a thioester bond between the SUMO C-terminal diglycine and a cysteine residue within the E1 protein under the consumption of ATP. An E2 conjugase (UBE2I) binds to the complex, so that the activated SUMO can be transfered to one of its own cysteine residues via transesterification. 
 
-The thus loaded E2 can recognize potential target proteins via an exposed motif of four amino acids. The motif is generally described as $\Psi$KxD/E, i.e. a large hydrophobic residue, followed by a lysine, a spacer residue and an acidic residue~\cite{sampson_small_2001}. The motif is often found in an extended loop extending from the protein or in a disordered region~\todo{REF}. The central lysine within the motif enters the E2's active site where it comes into contact with the SUMO diglycine. There, a peptide bond is formed between the lysine $\varepsilon$-amino group and the SUMO C-terminus~\cite{bernier-villamor_structural_2002}. This process can be made more efficient in the presence E3 proteins. It is interesting to note, that while only a single SUMO E2 conjugase (UBE2I) is encoded by the human genome, there is a variety of different SUMO E3 ligases. Some work by simply stabilizing the SUMO-E2 complex, while others can outright force-feed non-canonical targets to the E2~\cite{streich_jr_capturing_2016}. 
+The thus loaded E2 can recognize potential target proteins via an exposed motif of four amino acids. The motif is generally described as $\Psi$KxD/E, i.e. a large hydrophobic residue, followed by a lysine, a spacer residue and an acidic residue~\cite{sampson_small_2001}. The motif is often found in an exposed loop extending from the protein or in a disordered region~\cite{bernier-villamor_structural_2002,macauley_beads---string_2006,geiss-friedlander_concepts_2007}. The central lysine within the motif enters the E2's active site where it comes into contact with the SUMO diglycine. There, a peptide bond is formed between the lysine $\varepsilon$-amino group and the SUMO C-terminus~\cite{bernier-villamor_structural_2002}. This process can be made more efficient in the presence E3 proteins. It is interesting to note, that while only a single SUMO E2 conjugase (UBE2I) is encoded by the human genome, there is a variety of different SUMO E3 ligases. Some work by simply stabilizing the SUMO-E2 complex, while others can outright force-feed non-canonical targets to the E2~\cite{streich_jr_capturing_2016}. 
 
 \begin{figure}[h!]
 	\centering
@@ -152,9 +155,7 @@ The thus loaded E2 can recognize potential target proteins via an exposed motif 
 	\label{fig:sumo_chaining}
 \end{figure}
 
-Like ubiquitin, SUMO can also form chains (Figure \ref{fig:sumo_chaining}). However, of the four SUMO proteins encoded by the human genome, only SUMO2 and SUMO3 are capable of doing so, as they contain a suitable lysine residue within a disordered N-terminal tail\todo{REF}. Capili and Lima previously observed that the E2 (UBE2I) and SUMO can interact in a noncovalent manner via a distinct binding interface~\cite{capili_structure_2007}. According to a model proposed by Alontaga and colleagues~\cite{alontaga_rwd_2015} this interaction is a key mechanism in SUMO chain formation. The interaction recruits a second, SUMO-loaded E2 that interacts with the complex in such a manner that the lysine within the first SUMO's N-terminal tail can find its way into the active site of the second E2, where the second SUMO is concatenated.
-
-
+Like ubiquitin, SUMO can also form chains (Figure \ref{fig:sumo_chaining}). However, of the four SUMO proteins encoded by the human genome, only SUMO2 and SUMO3 are capable of doing so, as they contain a suitable lysine residue within a disordered N-terminal tail\todo{REF}. Capili and Lima previously observed that the E2 (UBE2I) and SUMO can interact in a noncovalent manner via a distinct binding interface~\cite{capili_structure_2007}. According to a model proposed by Alontaga and colleagues~\cite{alontaga_rwd_2015} this interaction is a key mechanism in SUMO chain formation. The interaction recruits a second, SUMO-loaded E2 that interacts with the complex in such a manner that the lysine within the first SUMO's N-terminal tail can find its way into the active site of the second E2, where the second SUMO is concatenated. While the role of polySUMO chains in humans are still unclear, it has been shown that yeast deficient in SUMO chain formation are unable to perform meiosis~\cite{cheng_sumo_2006}.
 
 Given the complexity of the Sumoylation system, especially surrounding the E2 component, an examination of sequence-structure-function relationships becomes a multifaceted problem. Mutations could in principle affect any combination of the multiple interaction interfaces which in turn contribute in complex ways to the overall cellular phenotype.
-An alanine scan of the yeast SUMO E2 Ubc9 was previously performed and succeeded in identifying functionally important sites within the protein~\cite{20}. Similarly, a DMS scan of ubiquitin, was previously completed~\cite{21}. While both of these projects provided great insight into the biochemistry of ubiquitin-like protein pathways, neither has produced a complete map.
+An alanine scan of the yeast SUMO E2 Ubc9 was previously performed and succeeded in identifying functionally important sites within the protein~\cite{bencsath_identification_2002}. Similarly, a DMS scan of ubiquitin was previously completed~\cite{roscoe_analyses_2013}. While both of these projects provided great insight into the biochemistry of ubiquitin-like protein pathways, neither has produced a complete map. The Deep Mutational Scanning Framework we will discuss in chapter 2 enabled us to not only recapitulate many of the known mechansims in SUMO and its E2, but also to uncover new details about their biochemistry, as will be discussed in chapter 3.
