--- a/thesis.bib
+++ b/thesis.bib
@@ -105,6 +105,26 @@
 	pages = {707}
 }
 
+@article{geiss-friedlander_concepts_2007,
+	title = {Concepts in sumoylation: a decade on},
+	volume = {8},
+	copyright = {© 2007 Nature Publishing Group},
+	issn = {1471-0072},
+	shorttitle = {Concepts in sumoylation},
+	url = {http://www.nature.com/nrm/journal/v8/n12/abs/nrm2293.html},
+	doi = {10.1038/nrm2293},
+	abstract = {A decade has passed since SUMO (small ubiquitin-related modifier) was discovered to be a reversible post-translational protein modifier. During this time many enzymes that participate in regulated SUMO-conjugation and -deconjugation pathways have been identified and characterized. In parallel, the search for SUMO substrates has produced a long list of targets, which appear to be involved in most cellular functions. Sumoylation is a highly dynamic process and its outcomes are extremely diverse, ranging from changes in localization to altered activity and, in some cases, stability of the modified protein. At first glance, these effects have nothing in common; however, it seems that they all result from changes in the molecular interactions of the sumoylated proteins.},
+	language = {en},
+	number = {12},
+	urldate = {2014-03-05},
+	journal = {Nature Reviews Molecular Cell Biology},
+	author = {Geiss-Friedlander, Ruth and Melchior, Frauke},
+	month = dec,
+	year = {2007},
+	pages = {947--956},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/7THPWAEX/Geiss-Friedlander and Melchior - 2007 - Concepts in sumoylation a decade on.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/JR7EWXKR/nrm2293.html:text/html}
+}
+
 @article{fowler_high-resolution_2010,
 	title = {High-resolution mapping of protein sequence-function relationships},
 	volume = {7},
@@ -2118,4 +2138,62 @@ View full text},
 	pages = {168},
 	annote = {Pages 168 in PDF},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/4DSH7DUP/Bloom - 2015 - Software for the analysis and visualization of dee.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/2NRHGQ3C/s12859-015-0590-4.html:text/html}
+}
+
+@article{nacerddine_sumo_2005,
+	title = {The {SUMO} {Pathway} {Is} {Essential} for {Nuclear} {Integrity} and {Chromosome} {Segregation} in {Mice}},
+	volume = {9},
+	issn = {1534-5807},
+	url = {http://www.cell.com/developmental-cell/abstract/S1534-5807(05)00389-8},
+	doi = {10.1016/j.devcel.2005.10.007},
+	language = {English},
+	number = {6},
+	urldate = {2017-03-02},
+	journal = {Developmental Cell},
+	author = {Nacerddine, Karim and Lehembre, François and Bhaumik, Mantu and Artus, Jérôme and Cohen-Tannoudji, Michel and Babinet, Charles and Pandolfi, Pier Paolo and Dejean, Anne},
+	month = dec,
+	year = {2005},
+	pmid = {16326389},
+	pages = {769--779},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/RFHSN5W5/Nacerddine et al. - 2005 - The SUMO Pathway Is Essential for Nuclear Integrit.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/GF869RC8/S1534-5807(05)00389-8.html:text/html}
+}
+
+@article{macauley_beads---string_2006,
+	title = {Beads-on-a-{String}, {Characterization} of {Ets}-1 {Sumoylated} within {Its} {Flexible} {N}-terminal {Sequence}},
+	volume = {281},
+	issn = {0021-9258, 1083-351X},
+	url = {http://www.jbc.org/content/281/7/4164},
+	doi = {10.1074/jbc.M510488200},
+	abstract = {Sumoylation regulates the activities of several members of the ETS transcription factor family. To provide a molecular framework for understanding this regulation, we have characterized the conjugation of Ets-1 with SUMO-1. Ets-1 is modified in vivo predominantly at a consensus sumoylation motif containing Lys-15. This lysine is located within the unstructured N-terminal segment of Ets-1 preceding its PNT domain. Using NMR spectroscopy, we demonstrate that the Ets-1 sumoylation motif associates with the substrate binding site on the SUMO-conjugating enzyme UBC9 (Kd ∼400 μm) and that the PNT domain is not involved in this interaction. Ets-1 with Lys-15 mutated to an arginine still binds UBC9 with an affinity similar to the wild type protein, but is no longer sumoylated. NMR chemical shift and relaxation measurements reveal that the covalent attachment of mature SUMO-1, via its flexible C-terminal Gly-97, to Lys-15 of Ets-1 does not perturb the structure or dynamic properties of either protein. Therefore sumoylated Ets-1 behaves as “beads-on-a-string” with the two proteins tethered by flexible polypeptide segments containing the isopeptide linkage. Accordingly, SUMO-1 may mediate interactions of Ets-1 with signaling or transcriptional regulatory macromolecules by acting as a structurally independent docking module, rather than through the induction of a conformational change in either protein upon their covalent linkage. We also hypothesize that the flexibility of the linking polypeptide sequence may be a general feature contributing to the recognition of SUMO-modified proteins by their downstream effectors.},
+	language = {en},
+	number = {7},
+	urldate = {2017-03-02},
+	journal = {Journal of Biological Chemistry},
+	author = {Macauley, Matthew S. and Errington, Wesley J. and Schärpf, Manuela and Mackereth, Cameron D. and Blaszczak, Adam G. and Graves, Barbara J. and McIntosh, Lawrence P.},
+	month = feb,
+	year = {2006},
+	pmid = {16319071},
+	pages = {4164--4172},
+	annote = {sumo motif in disordered region},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/BXJKZH9M/Macauley et al. - 2006 - Beads-on-a-String, Characterization of Ets-1 Sumoy.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/NEXME9E9/4164.html:text/html}
+}
+
+@article{cheng_sumo_2006,
+	title = {{SUMO} modifications control assembly of synaptonemal complex and polycomplex in meiosis of {Saccharomyces} cerevisiae},
+	volume = {20},
+	issn = {0890-9369, 1549-5477},
+	url = {http://genesdev.cshlp.org/content/20/15/2067},
+	doi = {10.1101/gad.1430406},
+	abstract = {The synaptonemal complex (SC) is a proteinaceous complex that apparently mediates synapsis between homologous chromosomes during meiotic prophase. In Saccharomyces cerevisiae, the Zip1 protein is the integral component of the SC. In the absence of a DNA double-strand break or the SC initiation protein Zip3, Zip1 proteins aggregate to form a polycomplex (PC). In addition, Zip1 is also responsible for DSB-independent nonhomologous centromere coupling at early meiotic prophase. We report here that Zip3 is a SUMO (small ubiquitin-related modifier) E3 ligase and that Zip1 is a binding protein for SUMO-conjugated products. Our results also suggest that at early meiotic prophase, Zip1 interacts with Zip3-independent Smt3 conjugates (e.g., Top2) to promote nonhomologous centromere coupling. At and after mid-prophase, the Zip1 protein begins to associate with Zip3-dependent Smt3 conjugates (e.g., Red1) along meiotic chromosomes in the wild-type cell to form SCs and with Smt3 polymeric chains in the zip3 mutant to form PCs.},
+	language = {en},
+	number = {15},
+	urldate = {2017-03-02},
+	journal = {Genes \& Development},
+	author = {Cheng, Chung-Hsu and Lo, Yu-Hui and Liang, Shu-Shan and Ti, Shih-Chieh and Lin, Feng-Ming and Yeh, Chia-Hui and Huang, Han-Yi and Wang, Ting-Fang},
+	month = aug,
+	year = {2006},
+	pmid = {16847351},
+	keywords = {Meiosis, SUMO, synaptomenal complex, Ulp2, Zip1, Zip3},
+	pages = {2067--2081},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/HHP6T754/Cheng et al. - 2006 - SUMO modifications control assembly of synaptonema.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/DZCQM8RS/2067.html:text/html}
 }
